[BUGFIX] Use padding instead of margin for RTE spacing

--- a/Resources/Public/Css/bootstrap5-rte.css
+++ b/Resources/Public/Css/bootstrap5-rte.css
@@ -17383,7 +17383,7 @@ a.pswp__share--download:hover {
 }
 
 body {
-  margin: 20px;
+  padding: 20px;
 }
 
 .cke_combopanel {
