--- a/Resources/Public/Scss/bootstrap5/rte.scss
+++ b/Resources/Public/Scss/bootstrap5/rte.scss
@@ -7,7 +7,7 @@
 // RTE Stylings
 //
 body {
-    margin: 20px;
+    padding: 20px;
 }
 .cke_combopanel {
     min-width: 200px;
